# cangyan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
builder/: pubspec.yaml
builder/android/: build.gradle
builder/ios/: core.podspec
builder/linux/: CMakeLists.txt
builder/macos/: core.podspec
builder/windows/: CMakeLists.txt
core/: .gitignore  Cargo.toml
core/examples/: config.rs  update.rs
core/src/: frb_generated.rs  lib.rs
core/src/api/: mod.rs
core/src/api/config/: mod.rs
core/src/api/cyfile/: credit.rs  date.rs  file.rs  handle.rs  mod.rs  note.rs  page.rs  pages.rs  project.rs  source.rs  summary.rs  text.rs
core/src/api/file/: date.rs  file.rs  handle.rs  mod.rs  note.rs  page.rs  project.rs  source.rs  summary.rs
core/src/api/states/: create.rs  edit.rs  home.rs  info.rs  mod.rs  workspace.rs
core/src/api/tools/: editor.rs  file.rs  mod.rs  pages.rs  summary.rs  workspace.rs
core/src/api/update/: mod.rs
core/src/api/workspace/: file.rs  folder.rs  mod.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cangyan.dart  core.dart  main.dart  pages.dart  theme.dart  widgets.dart
lib/core/: cyfile.dart  file.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  states.dart  tools.dart
lib/dialogs/: create_project.dart  duplicated_name.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+74 files in other folders)
